add Mockk to libs.versions.toml